📦 Re-add JEI support